--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "http-server src",
+    "dev": "http-server src --port 32100",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
