--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "html-template",
   "version": "1.0.0",
   "main": "index.js",
+  "description": "Full HTML + CSS + TailwindCSS + JavaScript template with auto-reload via CDN-injected scripts",
   "scripts": {
-    "dev": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "chokidar": "^3.6.0",
+    "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
